完成导航页面和附近的人页面

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 jdbcUrl=jdbc:mysql://127.0.0.1:3306/nsff?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=CST
-driverClass=com.mysql.cj.jdbc.Driver
+driverClass=com.mysql.jdbc.Driver
 user=root
 password=root
 initialPoolSize=10
